# Transaction-System-using-grpc

./: README.md
team2/: CMakeLists.txt  Dockerfile  README.md  common.cmake
team2/client/: CMakeLists.txt  clientDemo.cc  config.ini
team2/client/protos/: MallService.grpc.pb.h  MallService.pb.cc  MallService.pb.h  MallService.proto  basicInfoService.grpc.pb.h  basicInfoService.pb.cc  basicInfoService.pb.h  basicInfoService.proto
team2/conf/: config.ini
team2/include/: bagdao.h  gooddao.h  onsalegooddao.h  tradedao.h  userdao.h
team2/k8s-myapp/: README.MD
team2/k8s-myapp/.kube/: config
team2/k8s-myapp/VerifyingBasicInfo/: Dockerfile
team2/k8s-myapp/VerifyingBasicInfo/k8s/: verifying-basic-job.yaml
team2/k8s-myapp/VerifyingBasicInfo/src/: go.mod  main.go
team2/k8s-myapp/VerifyingMall/: Dockerfile  README.MD
team2/k8s-myapp/VerifyingMall/k8s/: verifying-mall-job.yaml
team2/k8s-myapp/VerifyingMall/src/: go.mod  main.go
team2/k8s-myapp/basicInfo/: Dockerfile
team2/k8s-myapp/basicInfo/k8s/: basicInfo.yaml
team2/k8s-myapp/basicInfo/src/: go.mod  main.go
team2/k8s-myapp/mall/: Dockerfile  README.MD
team2/k8s-myapp/mall/k8s/: mall.yaml
team2/k8s-myapp/mall/src/: go.mod  main.go
team2/k8s-myapp/seckill/: Dockerfile
team2/k8s-myapp/seckill/k8s/: seckill.yaml
team2/k8s-myapp/seckill/src/: go.mod  main.go
team2/lib/: CMakeLists.txt  configmodule.cc  configmodule.h  const.h  dao.cc  dao.h  datetime.cc  datetime.h  dbmodule.cc  dbmodule.h  imodule.h  log.cc  log.h  readme  redisdao.cc  redisdao.h  value.cc  value.h
team2/lib/hiredis/: .travis.yml  BUILD  CHANGELOG.md  Makefile  appveyor.yml  async.c  hiredis.c  hiredis.h  net.c  read.c  test.c
team2/myDB/: MINI课题-道具配置表.csv  MINI课题-道具配置表.xlsx  createbag.sql  creategood.sql  createonsalegood.sql  createtrade.sql  creatuser.sql  init.sql
team2/src/: bagdao.cc  gooddao.cc  onsalegooddao.cc  tradedao.cc  userdao.cc
team2/src/basicInfoServer/: CMakeLists.txt  basicInfoServer.cc
team2/src/basicInfoServer/protos/: basicInfoService.grpc.pb.cc  basicInfoService.pb.cc  basicInfoService.pb.h  basicInfoService.proto
team2/src/mallServer/: CMakeLists.txt  mallServer.cc
team2/src/mallServer/protos/: MallService.grpc.pb.cc  MallService.pb.cc  MallService.pb.h
team2/src/seckillServer/: CMakeLists.txt  Md5.cc  Md5.h  Worker.cc  Worker.h  config.ini  seckillServer.cc  seckill_client.cc
team2/src/seckillServer/protos/: SecKillService.grpc.pb.cc  SecKillService.grpc.pb.h  SecKillService.pb.cc  SecKillService.pb.h
team2/test/: MallService.proto  config.json  initConfig.json  issucc.sql  readme.md  result.html  result.json
team2/test/evans/: SecKillService.proto  logintest.json  modifygood.json  modifyuser.json  purchase.json  readme.md  registertest.json  saletest.json  searchgoodtest.json  searchonsale.json  tradetest.json  upsale.json
